@@ -1,6 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
 26/08/2011
 - bugfix when generating nocache code which contains double \
+- bugfix handle race condition if cache file was deleted between filemtime and include
 
 17/08/2011
 - bugfix CacheResource_Custom bad internal fetch() call
